update useridand password

--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,7 @@ NODE_ENV = "development"
 
 #Admin Credentials
 SELLER_EMAIL = "admin@example.com"
-SELLER_PASSWORD = "greatstack123"
+SELLER_PASSWORD = "buyit@@##123"
 
 # MongoDB Setup
 MONGODB_URI = "mongodb+srv://buyit1172_db_user:XVOvUujYsMbxECnK@cluster0.j42b3gc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
